--- a/style.css
+++ b/style.css
@@ -1,3 +1,114 @@
-body{
-	background-color: skyblue;
+@import url('https://fonts.googleapis.com/css2?family=Della+Respira&display=swap');
+
+body, html{
+	font-family: 'Della Respira', serif;
+	padding:  0;
+	margin: 0;
 }
+
+h1{
+	font-weight: 800;
+	font-size: 50px;
+}
+
+h3{
+	font-weight: bold;
+	font-size: 30px;
+}
+
+h4{
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.wrapper{
+	width: 960px;
+	margin: 0 auto;
+}
+
+.hero-banner{
+	background-color: #80daff;
+	min-height: 100vh;
+	padding: 50px 20px;
+	box-sizing: border-box;
+	position: relative;
+	overflow: hidden;
+}
+
+.hero-banner h1{
+	color: white;
+	margin: 14px 0 20px;
+}
+
+.hero-banner h3{
+	color: white;
+	margin: 0 0 35px;
+}
+
+.hero-banner h4,
+.hero-banner h4 a{
+	color: white;
+	margin: 0;
+}
+
+.character1{
+background: url(https://i.imgur.com/j5LwvAt.png); no-repeat 0 0;
+background-size: 100%;
+ width: 363px;
+ height: 344px;
+ position: absolute; top: 140px; right: 20px;
+ transform: rotate(15deg);
+}
+
+.character2{
+	background: url(https://i.imgur.com/FfBMQqA.png); no-repeat 0 0;
+background-size: 100%;
+	width: 309px;
+	height: 371px;
+	position: absolute; top: 213px; right: 250px;
+	transform: rotate(-5deg);
+}
+
+.character3{
+	background: url(https://i.imgur.com/vP8nFqB.png); no-repeat 0 0;
+background-size: 100%;
+	width: 297px;
+	height: 286px;
+	position: absolute; bottom: 74px; right: 120px;
+}
+
+a.cta,
+button.cta{
+	font-size: 30px;
+	font-weight: bold;
+	color: white;
+	background: #80daff;
+	display: inline-block;
+	box-shadow: 0 0 0 10px rgba(0,127,255,.15);
+	padding: 20px 30px;
+	border-radius: 10px;
+	text-decoration: none;
+}
+
+a.cta.alt,
+button.cta.alt{
+	background-color: #fabeff;
+	box-shadow: 0 0 0 10px rgba(0,0,0,.15);
+}
+
+/*
+
+<div class="hero-banner">
+		<div class="wrapper">
+			<h4>PHLOX from <a href="https://www.instagram.com/maggiepinkien/">Instagram</a> presents</h4>
+			<h1> The Most Magical &amp;<br>
+			 Graceful Creatures!</h1> 
+			 <h3> It's the Unicorn!</h3>
+			 <a class="cta alt" href="#more-info">Read More</a>
+		</div>
+		<div class="character1"></div>
+		<div class="character2"></div>
+		<div class="character3"></div>
+	</div>
+
+*/
