Nav and read more styling
also did some HTML changes

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ h1{
 	font-size: 50px;
 }
 
+h2{
+	font-weight: 800;
+	font-size: 50px;
+}
+
 h3{
 	font-weight: bold;
 	font-size: 30px;
@@ -19,6 +24,12 @@ h3{
 h4{
 	font-weight: bold;
 	font-size: 20px;
+}
+
+p{
+	font-weight: bold;
+	font-size: 30px;
+	margin: 30px 0;
 }
 
 .wrapper{
@@ -96,19 +107,64 @@ button.cta.alt{
 	box-shadow: 0 0 0 10px rgba(0,0,0,.15);
 }
 
+nav{
+	height: 100px;
+	background-color: white;
+	box-shadow: 0 5px 8px rgba(0,0,0,.2);
+	position: sticky;
+	top: 0;
+}
+
+nav .logo{
+	display: block;
+	width: 374px;
+	height: 80px;
+	position: absolute; top: 50%; left: 5px;
+	margin-top: -40px;
+	background: url(https://i.imgur.com/rAx799P.png) no-repeat 0 0;
+	background-size: 100%;
+	overflow: hidden;
+	text-indent: -999px;
+}
+
+nav ul{
+	padding: 0;
+	margin: 0;
+	margin: 0 20px 0 0;
+}
+
+nav ul li{
+	padding: 0;
+	margin: 0;
+	display: block;
+	float: right;
+}
+
+nav ul li a{
+	display: block;
+	height: 100%;
+	box-sizing: border-box;
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: bold;
+	color: #111111;
+	text-decoration: none;
+	padding: 35px 10px;
+	line-height: 30px;
+}
+
+.more-info{
+	text-align: center;
+
+}
+
 /*
 
-<div class="hero-banner">
-		<div class="wrapper">
-			<h4>PHLOX from <a href="https://www.instagram.com/maggiepinkien/">Instagram</a> presents</h4>
-			<h1> The Most Magical &amp;<br>
-			 Graceful Creatures!</h1> 
-			 <h3> It's the Unicorn!</h3>
-			 <a class="cta alt" href="#more-info">Read More</a>
-		</div>
-		<div class="character1"></div>
-		<div class="character2"></div>
-		<div class="character3"></div>
+<div class="more-info" id="more-info">
+		<h2>Join the Unicorn Fan Club!</h2>
+		<p> Every week we have <span class="highlight">a party.</span> If you want to 
+		join us then join our fan club. Members will also receive <span class="highlight">glitter and cupcakes.</span> Super fun!
+		<button class="cta">Sign Me Up!</button>
 	</div>
 
 */
