--- a/style.css
+++ b/style.css
@@ -262,30 +262,131 @@ footer a{
 
 .popup{
 	display: none;
+	position: fixed; top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 2;
 }
 
+.popup.show{
+	display: block;
+}
 
+.popup .blanket{
+	background-color: rgba(0,0,0,.7);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+
+.popup .content{
+	box-sizing: border-box;
+	padding: 30px 40px;
+	width: 960px;
+	height: 500px;
+	background-color: white;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-top: -250px;
+	margin-left: -480px;
+}
+
+.popup h2{
+	margin: 10px 0 20px;
+}
+
+.popup .cta{
+	margin-top: 40px;
+}
+
+.popup .close{
+	width: 80px;
+	height: 80px;
+	background: hotpink url(https://i.imgur.com/sKwc96A.png) no-repeat center center;
+	background-size: 50%;
+	Position: relative;
+	top: -112%;
+	right: -54%;
+	border-radius: 50%;
+	border: none;
+	outline: none;
+	overflow: hidden;
+	text-indent: -999px;
+	cursor: pointer;
+
+}
+
+.popup .row{
+
+}
+
+.popup .row:ater{
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.popup .item{
+	float: left;
+	width: 415px;
+	margin-left: 40px;
+	text-align: Left;
+}
+
+.popup .item:first-child{
+	margin-left: 0;
+}
+
+.popup .item label{
+	display: block;
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.popup .item input[type='text']{
+	display: block;
+	font-size: 30px;
+	font-weight: bold;
+	border: 4px solid #111111;
+	height: 70px;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 15px 20px;
+
+}
 
 /*
 
-<div class="sep"></div>
-	<div class="story" id="story">
-		<ul class="nb-list">
-			<li class="deepskyblue">Love</li>
-			<li class="gray">&nbsp;</li>
-			<li class="pink dragging">Magic</li>
-			<li class="mediumpurple">Friendship</li>
-			<li class="deepskyblue">Fun</li>
-			<li class="pink">Adventures</li>
-			<li class="mediumpurple">Sparkles</li>
-			<li class="deepskyblue">Cupcakes</li>
-		</ul>
-		<h3>Left: Things We Find Important<br/>
-		Below: Our Story</h3>
-		<p>Once upon a time, these magical creatures roamed the lands. They were always helping others with their unicorn magic.</p>
-		<p>Until one day the unicorns were hunted by evil greedy people so they could have their magic all to themselves.</p>
-		<p>Some believe the unicorns are still out there. Secretly making the world a more magical place. Some say they will reveal themselves to those with a pure heart and grant them wishes!</p>
+<div class="popup">
+		<div class="blanket"></div>
+		<div class="content">
+			<h2>Fill In Your Details</h2>
+			<form action="">
+				<div class="item">
+				<label>Your First Name</label>
+				<input type="text" placeholder="Luna" value="Luna">
+			</div>
+			<div class="item">
+				<label>Your Last Name</label>
+				<input type="text" placeholder="Petunia">
+			</div>
+			<div class="item">
+				<label>Your Favorite Color</label>
+				<input type="text" placeholder="Rainbow">
+			</div>
+			<div class="item">
+				<label>Your Favorite Food</label>
+				<input type="text" placeholder="Cupcakes">
+			</div>
+			<button class="cta">I Want In!</button>
+			</form>
+			<button class="close">Close</button>
 	</div>
-	<div class="sep"></div>
 
 */
